# testAzureCreds

./: .gitignore  CMakeLists.txt  readme.md
.github/: workflow.yml
data/: accounts.tsv  df.txn  test.txn
include/: account.h  entry.h  transaction.h
src/: account.cpp  entry.cpp  main.cpp  transaction.cpp
