cmake_minimum_required(VERSION 3.26)

find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
endif()

project(AccountTesting)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
set(CMAKE_SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/src)
set(CMAKE_INCLUDE_PATH ${CMAKE_HOME_DIRECTORY}/include)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I ${CMAKE_INCLUDE_PATH}")

file(GLOB SOURCES "src/*.cpp")

add_executable(atest ${SOURCES})
